Align total and fix padding

--- a/src/pages/cart.module.css
+++ b/src/pages/cart.module.css
@@ -24,9 +24,11 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  padding: 0 var(--size-xl);
 }
 
-.totals {
+.totals,
+.table th.totals {
   text-align: right;
 }
 
